# conan-magnum-plugins

./: .gitignore  .travis.yml  CMakeLists.txt  build.py  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  test_assimp_plugin.cpp  test_freetype_plugin.cpp  test_package.cpp
